pkg/ibmvpc/examples/out/explain_out/VsiToVsi4_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.10.4 to 10.240.20.4 within test-vpc1-ky
Interpreted source: vsi1-ky[10.240.10.4]
Interpreted destination: vsi2-ky[10.240.20.4]
===========================================================================

No connections from vsi1-ky[10.240.10.4] to vsi2-ky[10.240.20.4];
connection is blocked by egress

Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection
Ingress: network ACL acl2-ky allows connection; security group sg2-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> | security group sg1-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky has no relevant allow rules
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl2-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg2-ky allows connection with the following allow rules
			index: 4, direction: inbound,  conns: protocol: all, remote: sg1-ky (10.240.10.4/32), local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
